# RayTracingInOneWeekend

./: .gitignore  CMakeLists.txt  README.md
output/: image.ppm
output/next_week/: Bouncing_spheres.ppm
output/weekend/: A_Simple_Red_Sphere.ppm  A_sphere_colored_according_to_its_normal_vectors.ppm  Resulting_render_of_normals-colored_sphere_with_ground.ppm  a_blue-to-white_gradient.ppm
src/common/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/next_week/: main.cc
src/weekend/: main.cc
